# sample-manager

./: .gitignore  Cargo.toml  README.md  biome.json  build.rs  code.rs  justfile  package.json
assets/: icon.icns
client/: app.html  index.html  package.json  tsconfig.json  vite.config.ts
client/css/: styles.css
client/js/: __titlebar__.js  browse.js  invoke.js  sidebar.js  waveform.js
client/src/: __app__.ts  alias.ts  api.ts  bus.ts  dialog.ts  helpers.ts  lying.d.ts  main.ts  preview.ts  settings.ts  shortcuts.ts
client/src-build/: final-minify.ts  id-gen.ts  minify-templates.ts
client/src/browse/: browse.ts  input.ts  pagination.ts  row.ts
client/src/bus/: events.ts
client/src/invoke/: invoke.ts  types.d.ts
client/src/player/: player.ts  sliders.ts
client/src/preview/: missing.ts  preview.ts
client/src/settings/: inputs.ts  settings.ts  template.ts
client/src/sidebar/: lazy-load.ts  parse.ts  render.ts  resize.ts  sidebar.ts  template.ts  tree.ts  vfs.ts
client/src/terminal/: terminal.ts
client/src/waveform/: decode.ts  waveform.ts
client/styles/: __app__.scss  plugin.scss  settings.scss  styles.scss  theme.scss
crates/sample-model/: Cargo.toml
crates/sample-model/bindings/: PluginId.ts  SampleEntry.ts  SampleType.ts  SearchRequest.ts
crates/sample-model/src/: lib.rs  sample.rs  wire.rs
crates/sample-model/src/wire/: entry.rs  search_request.rs
crates/tagger-charset/: Cargo.toml
crates/tagger-charset/src/: lib.rs
crates/tagger-compiler/: Cargo.toml  tags.tree
crates/tagger-compiler/src/: lib.rs  main.rs  parser.rs  trie.rs
crates/tagger-runner/: Cargo.toml
crates/tagger-runner/src/: lib.rs
plugins/base/: Cargo.toml
plugins/base/src/: host.rs  json.rs  lib.rs  mem.rs  storage.rs  types.rs
plugins/base_build/: Cargo.toml
plugins/freesound/: Cargo.toml  Manifest.toml
plugins/freesound/src/: lib.rs
plugins/plugin-sdk/: Cargo.toml
plugins/plugin-sdk/src/: download.rs  fs.rs  host.rs  http.rs  lib.rs  mem.rs  storage.rs
plugins/plugin-wire/: Cargo.toml
plugins/plugin-wire/src/: frame.rs  lib.rs  sample.rs  search_request.rs  types.rs
src/: audio.rs  commands.rs  error.rs  event.rs  http.rs  ipc.rs  logger.rs  main.rs  plugins.rs  schema.rs  state.rs  window.rs
src/audio/: audio_loop.rs  decode.rs  device.rs  handle.rs
src/commands/: bytes.rs  fs.rs  window.rs
src/event/: fs.rs
src/http/: html.rs  thumb.rs
src/ipc/: audio.rs  commands.rs  config.rs  fs.rs  logger.rs  plugins.rs  samples.rs  state.rs  theme.rs  waveform.rs  window.rs
src/ipc/commands/: audio.rs  config.rs  fs.rs  logger.rs  plugins.rs  samples.rs  theme.rs
src/logger/: ansi.rs
src/plugins/: host.rs  icon.rs  loader.rs  manifest.rs  runner.rs
src/state/: app_paths.rs  config.rs  samples.rs
src/state/config/: cache.rs  color.rs  ffmpeg.rs  theme.rs
src/state/config/themes/: catppuccin-frappe.toml  catppuccin-latte.toml  catppuccin-macchiato.toml  catppuccin-mocha.toml  light.toml  midnight.toml  peach.toml  phantom.toml  valentine.toml
src/state/samples/: data.rs  search.rs  tagger.rs  tags.txt  utils.rs  waveform.rs
styles/: styles.scss
tagger/: CMakeLists.txt  tags.tree  tsconfig.json
tagger/compiler/: Cargo.toml  lib.ts  main.ts
tagger/compiler/lib/: ast.ts  compile.ts  tokenize.ts
tagger/compiler/src/: ast.rs  lexer.rs  main.rs  parser.rs
tagger/src/: libtagger.c  libtagger.h  node.h
