
cargo-features = ["profile-rustflags", "trim-paths"]

[package]
name = "sample-manager"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = ["plugins/*", "tagger/compiler"]

[dependencies]
assert_no_alloc = "1.1.2"
atomic_float = "1.1.0"
base64 = "0.22.1"
bitflags = "2.11.1"
blake3 = "1.8.5"
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
cpal = "0.17.3"
dirs = "6.0.0"
drag = "2.1.0"
fuzzy-matcher = "0.3.7"
image = { version = "0.25.10", default-features = false, features = ["webp"] }
maplit = "1.0.2"
paste = "1.0.15"
plugin_wire = { path = "./plugins/plugin-wire", features = ["std"] }
postcard = "1.1.3"
rayon = "1.12.0"
ringbuf = "0.4.8"
serde = { version = "1.0.228", default-features = false, features = [
  "derive",
  "rc",
] }
serde_json = "1.0.149"
struct-patch = "0.11.0"
symphonia = { version = "0.5.5", features = ["mp3", "wav", "vorbis"] }
tao = "0.35.0"
thiserror = "2.0.18"
tinyfiledialogs = "3.9.1"
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
ts-rs = "12.0.1"
ureq = "3.3.0"
url = "2.5.8"
wasmtime = { version = "44.0.1", default-features = false, features = [
  "cranelift",
  "runtime",
] }
which = "8.0.2"
wry = "0.55.0"
xmltree = "0.12.0"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = true
trim-paths = "all"
rustflags = ["-Cdebuginfo=0", "-Zthreads=8"]
