
[package]
name = "sample_model"
version = "0.1.0"
edition = "2024"

[dependencies]
fuzzy-matcher = "0.3.7"
heapless = { version = "0.9.3", features = ["serde"] }
postcard = { version = "1.1.3", features = ["use-std"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
thiserror = "2"
ts-rs = "12"
